Пофикшено описание парсера

--- a/main.tex
+++ b/main.tex
@@ -564,7 +564,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 fragment S: [sS];
 
-\lstinputlisting[caption=Лексемы ключевых слов Send, Set, Check, Recieve, language=java,  firstline=26,  lastline=40 , label = {lst:listKeyWords}]{res/BddLexer.g4}
+\lstinputlisting[caption={Лексемы ключевых слов Send, Set, Check, Recieve}, language=java,  firstline=26,  lastline=40 , label = {lst:listKeyWords}]{res/BddLexer.g4}
 
 Так как автомобильные системы тестируются в режиме реального времени, в тестовых сценариях необходимо явно оперировать временем. Ответ на запрос приходит не моментально, так же как и не моментально изменяются значения сигналов. Зачастую возникает необходимость проверить значение полученного сигнала несколько раз в определенные промежутки времени. В этом случае между отправкой запроса и получением ответа необходимо установить паузу, в течение которой тестовое оборудование не будет выполнять проверку полученных данных на соответствие ожидаемым данным, описанные в тестовом сценарии. Для реализации этой возможности введем ключевое слово Pause. После данного ключевого слова должно указываться значение $p_n$ такое, что $t_{n+1}=t_n+p_n$. лексемы, необходимые для паузы представлены на листинге \ref{lst:lPause}
 
@@ -652,7 +652,8 @@ fragment S: [sS];
 \begin{itemize}
 \itemШаг должен начинаться с ключевого символа, определяемого служебным символом “@”;
 \itemЕсли шаг начинается с ключевого слова \textbf{@Send}, \textbf{@Receive}, \textbf{@Set} или \textbf{@Check}, то далее должен идти текст инструкции.
-\itemЕсли шаг начинается с ключевого слова \textbf{@Pause}, то далее должно быть число и, по желанию, текст для описания шага.
+\itemЕсли шаг начинается с ключевого слова \textbf{@Pause}, то далее в квадратных скобках должно быть число и, по желанию, текст для описания шага.
+\itemЕсли шаг начинается с ключевого слова \textbf{@Repeat}, то далее в квадратных скобках должно быть указано число повторений подсценария. Сами подсценарии описываются в квадратных скобках. 
 \end{itemize}
 
 
@@ -673,20 +674,24 @@ fragment S: [sS];
 
 
 Правило для параметра можно описать следующим образом: пользователь должен указать символы, обозначающие начало и конец параметра (в лексере они указаны как квадратные скобки  ``['' и  ``]''). Внутри скобок находится значение параметра, которое может быть как текстом, так и числом. При этом значение параметра может отсутствовать (листинг \ref{lst:lcustomParameter}).
-\lstinputlisting[caption= синтаксическое правило для параметра, language=java,  firstline=27,      lastline=29 , label={lst:lcustomParameter}]
+\lstinputlisting[caption= синтаксическое правило для параметра, language=java,  firstline=33, lastline=35, label={lst:lcustomParameter}]
 {res/BddParser.g4}
 
+Для случая, если неоходимо выполнить несколько раз одни и те же действия, реализовано правило \textbf{repeatPart}, начинающееся с лексемы \textbf{Repeat} (листинг \ref{lst:lRepeatRule}). После ключевого слова должно быть указано количесво повторений и набор шагов, которые необходимо выболнить несколько раз.
 
-Так как тестовых сценариев в одном документе может быть несколько, то введем правило для описания тестовой спецификации  (листинг \ref{lst:specification}): тестовые сценарии объединяются в элементарную метку \textbf{testcases}. При этом в синтаксическом правиле тестового сценария \textbf{testcase} укажем, что он должен начинаться с лексемы \textbf{TestCase}, после которой следует его описание. С новой строки \textbf{eoi} следует правило \textbf{scenario}, в котором объединяются шаги одного тестового сценария.
+\lstinputlisting[caption= синтаксическое правило repeatPart, language=java,  firstline=25, lastline=27, label={lst:lRepeatRule}]
+{res/BddParser.g4}
+
+Так как тестовых сценариев в одном документе может быть несколько, то введем правило для описания тестовой спецификации  (листинг \ref{lst:specification}): тестовые сценарии объединяются в элементарную метку \textbf{testcases}. При этом в синтаксическом правиле тестового сценария \textbf{testcase} укажем, что он должен начинаться с лексемы \textbf{TestCase}, после которой следует его описание, правило для тестового сценария \textbf{scenario}, в котором объединяются шаги одного тестового сценария.
 
 
-\lstinputlisting[caption= синтаксическое правило для параметра, language=java,  firstline=5,      lastline=13 , label={lst:specification}]
+\lstinputlisting[caption= синтаксическое правило тестовой спецификации, language=java,  firstline=6, lastline=14 , label={lst:specification}]
 {res/BddParser.g4}
 
 Абстрактное синтаксическое дерево построенное для примера тестовой  вышеописанным правилам синтаксического анализа тестовый сценарий
 
 Из вышеописанных синтаксических правил пример тестовой спецификации для тестирования функции записи данных в энергонезависимую память представлен в линстинге \ref{lst:ExampleForAST}.
-\lstinputlisting[caption= Пример тестового сценария,language=java,  firstline=1,      lastline=15 , label={lst:ExampleForAST}]{res/FinalTestCaseExample.txt}
+\lstinputlisting[caption= Пример тестового сценария,language=java,  firstline=1, lastline=15 , label={lst:ExampleForAST}]{res/FinalTestCaseExample.txt}
 
 На рисунке \ref{fAST} проиллюстрировано абстрактное синтаксическое дерево для правила \textbf{specification}.
 \begin{Figure}[h!]{Пример AST тестовой спецификации}{fAST}
