Исправление опечаток, формулировка залдаич в презентации

--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@ AST& Abstract syntax tree\\
 
 Что касается тестирования автомобильных систем, необходимо хорошо понимать, как устроен автомобиль в целом и его составляющие по отдельности. Однако представления о системе у инженеров и менеджеров зачастую очень сильно расходятся. Взаимодействие участников бизнес процесса, а именно заказчика, бизнес-аналитика, менеджера, разработчика и тестировщика, является неотъемлемой частью гибкой методологии разработки ПО (Agile software development).
 
-В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем для того, чтобы описываемые на нем тестовые сценарии были понятны всем участникам бизнес цикла.
+В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем, позволяющего описывать тестовые сценарии участникам таким участникам бизнес цикла, как аналитики, разработчики и тестировщики.
 Практика «разработка через поведение» (behaviour-driven development, BDD) была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчать процесс разработки.
 
 
@@ -194,7 +194,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 Учитывая, что все системы стандартизированы, одну и ту же систему (например, лидары для автомобилей марок Diamler и Audi) можно протестировать использую одни и те же инструменты. Однако, среди современных средств для тестирования программных систем нет специализированных под специфические нужды автомобильной промышленности, и при этом позволяющих разрабатывать спецификации на человеко-читаемом языке для реализации BDD подхода.
 
 
-С расширением областей применения вычислительной техники возникли задачи, которые проще реализовать не программистам, а специалистам в определенной предетной области -- аналитикам. Однако зачастую  аналитики не имеют достаточных знаний в языках программирования общего назначения, либо использование этих языков не удобно из-за большого количества не относящихся к решаемой задаче деталей (управление памятью, низкоуровневые управляющие конструкции и так далее). Для решения этой проблемы возникла идея создавать проблемно-ориентированные языки (domain-specific language, DSL), позволяющие в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
+С расширением областей применения вычислительной техники возникли задачи, которые проще реализовать не программистам, а специалистам в определенной предметной области -- аналитикам. Однако зачастую  аналитики не имеют достаточных знаний в языках программирования общего назначения, либо использование этих языков не удобно из-за большого количества не относящихся к решаемой задаче деталей (управление памятью, низкоуровневые управляющие конструкции и так далее). Для решения этой проблемы возникла идея создавать проблемно-ориентированные языки (domain-specific language, DSL), позволяющие в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
 
 
 Хорошо разработанный DSL язык должен быть основан на следующих принципах \cite{DSLInAction}:
@@ -215,8 +215,9 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 Требования к разрабатываемой системе
 \begin{itemize}
 \itemАрхитектура тестов, разрабатываемых с помощью языка, должна быть событийно-управляемая.
-\itemЯзык должен быть проблемно-ориентированным
+\itemЯзык должен быть проблемно-ориентированным.
 \itemЯзык должен позволять использовать BDD подход.
+\itemРеализация языка должна предостаалять функционал, необходимый для симуляции работы автомобильных сетей.
 \end{itemize}
 
 \subsection{Обзор аналогов}
