--- a/main.tex
+++ b/main.tex
@@ -498,7 +498,7 @@ $S$ – начальный символ грамматики.
 \label{sSemanthAnalysis}
 В ходе семантического анализа проверяются отдельные правила записи исходных программ, которые не описываются контекстно-свободной грамматикой. Эти правила носят контекстно-зависимый характер, их называют семантическими соглашениями или контекстными условиями.
 
-Пользовательские инструкции, используемые в тестовых сценариях должны быть заранее объявлены пользователями в специальной библиотеке. Так как инструкции должны быть сформулированы в произвольной форме, обговоренной внутри команды, состоящей из аналитиков и тестировщиков, то в качестве библиотеки может использоваться java класс, в котором для каждой инструкции тестироващики должны для реализовать отдельный метод. Чтобы разделить входные инструкции по смысловой нагрузке на входные и выходные данные и прикрепить к каждой инструкции метод, необходимый для ее выполнения разумно создать java-аннотации, название которых будет соответствовать ключевым словам языка: Send-- для отправки данных, Recieve -- для получения данных и т.д.
+Пользовательские инструкции, используемые в тестовых сценариях должны быть заранее объявлены пользователями в специальной библиотеке. Так как инструкции должны быть сформулированы в произвольной форме, обговоренной внутри команды, состоящей из аналитиков и тестировщиков, то в качестве библиотеки может использоваться java класс, в котором для каждой инструкции тестироващики должны для реализовать отдельный метод. Чтобы разделить входные инструкции по смысловой нагрузке на входные и выходные данные и прикрепить к каждой инструкции метод, необходимый для ее выполнения разумно создать java-аннотации, название которых будет соответствовать ключевым словам языка: Send и Set-- для отправки данных, Recieve и Check-- для получения данных и т.д.
 В теле метода  соответствующей инструкции должны быть реализованы шаги отправки, получения данных и т.д., в зависимости от аннотации.
 
 Для того, чтобы определить метод, который должен быть выполнен при вызове заданной текстовой инструкции, а так же приведения типов пользовательских параметров, можно использовать рефлексию.
@@ -832,17 +832,17 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор
 %представительного множества тестов, анализ результатов испытаний.
 
-Для тестирования реализованного языка были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. Для этого было реализовано восемь junit-тестов с ипользованием пакета org.junit. Были проверены следующие тестовые случаи:
+Для тестирования реализованного языка были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. Для этого было реализовано восемь junit-тестов с использованием пакета org.junit. Были проверены следующие тестовые случаи:
 
 \begin{enumerate}
 \itemв качестве параметра для паузы указано не целочисленное значение, а текст;
 \itemзначение для паузы не указано;
-\itemзначение значение для паузы указано верно, в следующем шаге значение для паузы не указано;
+\itemзначение для паузы указано верно, в следующем шаге значение для паузы не указано;
 \itemне указана текстовая инструкция после ключевого слова @Send;
 \itemне указана текстовая инструкция после ключевого слова @Send, далее указан корректный шаг;
 \itemне указана текстовая инструкция после ключевого слова @Set, далее указан корректный шаг (листинг \ref{lst:testSetEmptyInstruction});
 \itemуказаны две корректные инструкции на одной и той же строке (листинг \ref{lst:testTwoInstructionsInTheSameLine});
-\itemуказан шаг, тестовая инструкция для которого не определена в тестовой бибилиотеке;
+\itemуказан шаг, тестовая инструкция для которого не определена в тестовой библиотеке;
 \end{enumerate}
 
 % \ref{lst:label}
@@ -886,7 +886,7 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 
 По мнению автора книги \cite{conceptPL} разработать краткий, но доступный по описанию язык – задача сложная, решение которой необходимо для успешного использования языка. Одной из пролем возникающих во время разработки языка являются несхожие предпочтения конечных пользователей языка. Большинство новых языков тестируются пользователями еще во время разработки.
 
-В качестве респондентов было выбрано 16 человек, занимающихся тестированием программного обеспечения автомобильных систем в компании ООО «Люксофт профешнл». Респондентам был представлен пример тестового сценария, рассматриваемого в разделе \ref{lexer}. Их попросили ответить на вопрос «Оцените степень удобства чтения приведенной ниже тестовой спецификации. Описывали бы вы по возможности тестовые сценарии подобным образом?». Результаты опроса представлены на рисунке \ref{fig:Opros}. 
+В качестве респондентов было выбрано 18 человек, занимающихся тестированием программного обеспечения автомобильных систем в компании ООО «Люксофт профешнл». Респондентам был представлен пример тестового сценария, рассматриваемого в разделе \ref{lexer}. Их попросили ответить на вопрос «Оцените степень удобства чтения приведенной ниже тестовой спецификации. Описывали бы вы по возможности тестовые сценарии подобным образом?». Результаты опроса представлены на рисунке \ref{fig:Opros}. 
 
 \begin{figure}[h!]
 \center{\includegraphics[width=\linewidth]{res/Opros}}
@@ -894,11 +894,11 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 \label{fig:Opros}
 \end{figure}
 
-По мнению 100\% респондентов, спецификации, описанные на разработанном языке достаточно понятны. При этом 13 из 18 опрошенных по возможности описывали бы тестовые сценарии на данном языке. 
+По мнению 100\% респондентов, спецификации, описанные на разработанном языке, достаточно понятны. При этом 13 из 18 опрошенных по возможности описывали бы тестовые сценарии на данном языке. 
 
 \section{Примеры применения разработанного языка}
 
-В качестве примера применения разработанного языка используем пример тестового сценария для проверки функционала для записи данных в энергонезависимую память, рассматриваемого в разделе \ref{lexer}. В качестве тестируемого оборудования использовался лидар. Тестовая спецификация представлена в листинге \ref{lst:FinalTestCaseExample}).
+В качестве примера применения разработанного языка используем пример тестового сценария для проверки функционала записи данных в энергонезависимую память, рассматриваемого в разделе \ref{lexer}. В качестве тестируемого оборудования использовался лидар. Тестовая спецификация представлена в листинге \ref{lst:FinalTestCaseExample}).
 
 \lstinputlisting[caption=Тестовая спецификация, language=java,  firstline=1,  lastline=10, , label={lst:FinalTestCaseExample} ]{res/FinalTestCaseExample.txt}
 
@@ -918,10 +918,10 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 %новизне и практической ценности ВКР. Предложения по внедрению результатов,
 %перспективы продолжения работы
 
-В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. При этом позволяет пользователям описывать инструкции для тестовых сценариев в свободной форме. В одном документе можно описать несколько тестовых сценариев, выполняющихся пооцерено в той последовательности, в которой были указаны в тестовой спецификации. Данные, полученые в результате выполнения теста сохраняются  в отдельный файл. 
+В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. Данный язык пользователям описывать инструкции для тестовых сценариев в свободной форме. В одном документе можно описать несколько тестовых сценариев, выполняющихся поочередно в той последовательности, в которой были указаны в тестовой спецификации. Данные, полученные в результате выполнения теста сохраняются  в отдельный файл. 
 
 
-По результатам опроса, проведенного среди опытных тестировщиков автомобильных систем выявлено, что разработанный язык мог бы использоваться на производстве. Однако очевидно, язык может быть улучшен. Для удобства использования разработанного языка в дальшейшем стоит изменить формат вывода результатов и представлять их в качестве таблицы, или же в каком-либо другом формате. Так же стоит реализовать графический интерфейс для удобства пользователей, в котором в режиме реального времени могли бы выводиться результаты тестового прогона. 
+По результатам опроса, проведенного среди опытных тестировщиков автомобильных систем выявлено, что разработанный язык мог бы использоваться на производстве. Однако очевидно, язык может быть улучшен. Для удобства использования разработанного языка в дальнейшем стоит изменить формат вывода результатов и представлять их в качестве таблицы, или же в каком-либо другом формате. Так же стоит реализовать графический интерфейс для удобства пользователей, в котором в режиме реального времени могли бы выводиться результаты тестового прогона. 
 
 %\addcontentsline{toc}{chapter}{bibname}
 \bibliographystyle{gost71s}
