хз что но тчото важное

--- a/main.tex
+++ b/main.tex
@@ -235,7 +235,7 @@ CAPL - процедурный язык, на котором выполнение блоков программы управляются собы
 
 \item CCDL
 
-Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, и не предоставляют пользователям в свободной форме описывать тестовые шаги (рис. \ref{fccdl}).
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, и не предоставляют пользователям возможность в свободной форме описывать тестовые шаги (рис. \ref{fccdl}).
 
 \begin{Figure}[h!]{Тестовый сценарий на языке CCDL}{fccdl}
 {\includegraphics[width=\linewidth]{res/CAPL-EX}}
@@ -831,7 +831,7 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор
 %представительного множества тестов, анализ результатов испытаний.
 
-Для тестирования реализованного языка были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. Для этого было реализовано восемь junit-тестов с использованием пакета org.junit. Были проверены следующие тестовые случаи:
+Для тестирования интерпретатора были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. Для этого было реализовано восемь junit-тестов с использованием пакета org.junit. Были проверены следующие тестовые случаи:
 
 \begin{enumerate}
 \itemв качестве параметра для паузы указано не целочисленное значение, а текст;
