--- a/spbstuthesis.sty
+++ b/spbstuthesis.sty
@@ -142,7 +142,7 @@
 \ifx \@Title\@empty
 \begin{small}
 \begin{center}
-Министерство образования и науки Российской Федерации\\
+Министерство науки и высшего образования \\
 Санкт-Петербургский политехнический университет Петра Великого\\
 Высшая школа программной инженерии\\
 \end{center}
@@ -260,7 +260,7 @@
 
 \newcommand{\makeabstract}{\chapter*{Реферат}
 
-На \pageref{LastPage} с.,
+На \pageref{LastPage} с.
 \ifnumcomp{\value{@LastFigure}}{>}{0}
 {, рис. \arabic{@LastFigure}}{}
 \ifnumcomp{\value{@LastTable}}{>}{0}
